--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-typescript-tailwind",
+  "name": "spa-template",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -18,11 +18,13 @@
   "author": "James J. E. Randall",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.7.8",
     "pinia": "^2.2.6",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.9",
     "@tsconfig/node22": "^22.0.0",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.9.0",
